[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/Interface/Menu-interface/Options-menu-background.png" type="Texture" id=1]
[ext_resource path="res://Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Cenas/Menus/Options_menu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[node name="Options_menu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -450.0
margin_top = -250.0
margin_right = 450.0
margin_bottom = 250.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Top_container" type="Control" parent="."]
anchor_right = 1.0
margin_bottom = 70.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Top_container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -54.5
margin_top = -19.0
margin_right = 54.5
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
text = "Opções"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn_exit" type="Button" parent="Top_container"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -22.0
margin_right = -18.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 2 )
text = "X"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom_container" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -430.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Res_options" type="OptionButton" parent="Bottom_container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -47.0
margin_top = -10.0
margin_right = 47.0
margin_bottom = 10.0
text = "Resolução"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Top_container/Btn_exit" to="." method="_on_Btn_exit_pressed"]
[connection signal="item_selected" from="Bottom_container/Res_options" to="." method="_on_Res_options_item_selected"]
